--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     color:  hsl(0, 0%, 63%);
     font-family: 'League Spartan', sans-serif;
+    /* width: 100vw; */
 }
 .head{
     /* background-image: url(images/mobile-image-hero-1.jpg); */
